changes - implement sorting and reducer - implement expanding and collapsing of rows - use context to avoid prop drilling

--- a/src/api/ui/views/table.css
+++ b/src/api/ui/views/table.css
@@ -53,3 +53,10 @@
     align-items: center;
     flex-grow: 1;
 }
+
+.datacore-table td .datacore-collapser {
+	max-width: 1.25em;
+}
+.datacore-table td:has(.datacore-card-collapser) {
+	max-width: 1.25em;
+}
